# sdu-es-self-learning

./: LICENSE  README.md
cources/01_计算思维/01_概率与统计/: main.py
cources/01_计算思维/02_微积分相关/: main.py
cources/01_计算思维/03_排序算法/: main.py
cources/02_面向对象程序设计/01_函数/: main.cpp
cources/02_面向对象程序设计/02_类/: main.cpp
cources/02_面向对象程序设计/03_数据的共享与保护/01/: a.cpp  main.cpp
cources/02_面向对象程序设计/03_数据的共享与保护/02/: main.cpp
cources/02_面向对象程序设计/03_数据的共享与保护/03/: a.h  main.cpp
cources/02_面向对象程序设计/03_数据的共享与保护/04/: main.cpp
cources/02_面向对象程序设计/04_数组指针与字符串/01/: main.cpp
cources/02_面向对象程序设计/04_数组指针与字符串/02/: main.cpp
cources/02_面向对象程序设计/04_数组指针与字符串/03/: main.cpp
cources/02_面向对象程序设计/04_数组指针与字符串/04/: main.cpp
cources/02_面向对象程序设计/projects/VectorDBServer/: CMakeLists.txt  README.md
cources/02_面向对象程序设计/projects/VectorDBServer/examples/: README.md
cources/02_面向对象程序设计/projects/VectorDBServer/examples/curl/: insert.sh  search.sh
cources/02_面向对象程序设计/projects/VectorDBServer/include/: constants.h  http_server.h  index_factory.h  json_request_handler.h  logger.h  simple_index.h
cources/02_面向对象程序设计/projects/VectorDBServer/simple_flat/: distance_utils.cpp  distance_utils.h  flat_index.cpp  flat_index.h  heap_utils.cpp  heap_utils.h
cources/02_面向对象程序设计/projects/VectorDBServer/src/: http_server.cpp  index_factory.cpp  json_request_handler.cpp  logger.cpp  main.cpp  simple_index.cpp
cources/03_数值分析与编程/03_最小二乘法/: main.py
cources/04_工程软件导论/01_CrownCAD二次开发/: README.md
flyship/week4/: TASK.md
flyship/week4/mcp-server-demo/: client.py  pyproject.toml  server.py
test/: 202400202063_01  202500202116_01  202500202117_01  README.md
(+23 files in other folders)
